@@ -182,6 +182,7 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
         var cfg = mapConfig.obj();
         var sql = [];
         var style = [];
+        var geom_column = [];
         var interactivity = [];
         var style_version = cfg.hasOwnProperty('global_cartocss_version') ? cfg.global_cartocss_version : [];
         for ( var i=0; i<cfg.layers.length; ++i ) {
@@ -208,9 +209,12 @@ module.exports = function(timeout, mml_store, map_store, mapnik_opts) {
             lyropt.interactivity = lyropt.interactivity.join(',');
           } 
           interactivity.push(lyropt.interactivity);
+          geom_column.push( lyropt['geom_column'] ); // possibly undefined
         }
         if ( ! sql.length ) throw new Error("No 'mapnik' layers in MapConfig");
-        return { sql: sql, style: style, style_version: style_version, interactivity: interactivity, ttl: 0 }
+        return { sql:sql, style:style, style_version:style_version,
+                 interactivity:interactivity, ttl:0,
+                 gcols:geom_column };
     };
 
     function TileliveAdaptor(renderer, format) {
