@@ -24,7 +24,7 @@
     "dependencies": {
         "underscore": "~1.3",
         "step": "~0.0.5",
-        "grainstore": "~0.18.1",
+        "grainstore": "http://github.com/CartoDB/grainstore/tarball/4d560ab1",
         "generic-pool": "~2.0.3",
         "express": "~2.5.11",
         "tilelive": "~4.4.2",
