@@ -1,3 +1,7 @@
+ Bug fixes:
+
+ - Support specifying column name in MapConfig (#191)
+
 Version 0.22.0
 2014-MM-DD
 
